tests/baselines/reference/asyncFunctionNoReturnType.errors.txt
error TS2468: Cannot find global value 'Promise'.
tests/cases/compiler/asyncFunctionNoReturnType.ts(1,1): error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
tests/cases/compiler/asyncFunctionNoReturnType.ts(2,9): error TS2304: Cannot find name 'window'.


!!! error TS2468: Cannot find global value 'Promise'.
==== tests/cases/compiler/asyncFunctionNoReturnType.ts (2 errors) ====
    async () => {
    ~~~~~~~~~~~~~
!!! error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
        if (window)
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
            return;
    }
    